k8s/ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  labels:
    app: ingress-first
spec:
  ingressClassName: ingress-example
  rules:
    - host: www.test.dev
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: main
                port: 
                  number: 80

    - host: web1.test.dev
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: web1
                port: 
                  number: 80
    - host: web2.test.dev
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: web2
                port: 
                  number: 80
    - host: tomcat.test.dev
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: tomcat
                port: 
                  number: 8080
