k8s/ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-paths
  labels:
    app: ingress-second
spec:
  # ingressClassName: ingress-paths
  rules:
    - host: www.test.loc
      http:
        paths:
          - path: "/page1"
            pathType: Prefix
            backend:
              service:
                name: webx
                port:
                  number: 80

          - pathType: Prefix
            path: /page2
            backend:
              service:
                name: webx
                port:
                  number: 80

          - pathType: Prefix
            path: /page3
            backend:
              service:
                name: webx
                port:
                  number: 80
